# danihmorais.github.io

./: LICENSE  README.md  index.html  main.py  montador_variaveis.py  package-lock.json  package.json  processador_docx.py  python_backend.spec  render.yaml  requirements.txt  tsconfig.json  vite.config.js
.github/workflows/: static.yml
DOCUMENTOS MODELO/: index.html
DOCUMENTOS MODELO/Documentos Modelo/: ADJUDICAÇÃO.docx  AVISO 29.06.rtf  EXTRATO ATA.docx  EXTRATO CONTRATO.docx  HOMOLOGAÇÃO.docx
FIORIILICSVTOWORD/: app.tsx  index.html  main.tsx  package-lock.json  package.json
LICITA.AI/: config.py  index.html  main.py  montador_variaveis.py  package-lock.json  package.json  processador_docx.py  requirements.txt  vite.config.js
LICITA.AI/modelos/: DFD - BASE.docx  ETP - BASE.docx  TR - BASE.docx
LICITA.AI/src/: api.ts  app.tsx  (+2 more)
LICITA.AI/src-tauri/: Cargo.toml  tauri.conf.json
LICITA.AI/src-tauri/capabilities/: default.json
LICITA.AI/src-tauri/src/: lib.rs  main.rs
MONTAEDITAL/: index.html  main.py
modelos/: Dispensa xx Proc xx -  MINUTA DE 13.07.2026.docx  Dispensa xx Proc xx -  MINUTA DE 15.04.2026.docx  Dispensa xx Proc xx -  MINUTA DP 13.07.2026.docx  Dispensa xx Proc xx -  MINUTA DP 15.04.2026.docx  Pregão xx Proc xx -  MINUTA PE 13.07.2026.docx  Pregão xx Proc xx -  MINUTA PE 15.04.2026.docx  Pregão xx Proc xx -  MINUTA PP 13.07.2026.docx  Pregão xx Proc xx -  MINUTA PP 15.04.2026.docx
src/: api.ts  app.tsx  updater.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+23 files in other folders)
