[package]
name = "monta-edital"
version = "1.0.1"
description = "A Tauri App"
authors = ["danih.morais"]
edition = "2021"

[lib]
name = "monta_edital_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "io-util"] }
